--- a/app/src/main/res/layout-xhdpi/pedido_activity.xml
+++ b/app/src/main/res/layout-xhdpi/pedido_activity.xml
@@ -45,15 +45,65 @@
                         android:src="@drawable/u"
                         android:layout_gravity="center_vertical"/>
 
-                    <TextView
-                        android:id="@+id/toolbar_title"
-                        android:layout_width="wrap_content"
+                    <LinearLayout
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Soft"
-                        android:textSize="18sp"
                         android:layout_gravity="center_vertical"
-                        android:fontFamily="@font/heebobold"
-                        android:textColor="@color/black"/>
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/toolbar_title"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Soft Pedidos"
+                            android:textSize="18sp"
+                            android:fontFamily="@font/heebobold"
+                            android:textColor="@color/black"/>
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="-10dp"
+                            android:orientation="horizontal">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/black"
+                                android:textSize="7sp"
+                                android:text="App: "/>
+
+                            <TextView
+                                android:id="@+id/versionname2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/black"
+                                android:textSize="7sp"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/black"
+                                android:text=" - "
+                                android:textSize="7sp"/>
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/black"
+                                android:textSize="7sp"
+                                android:text="Android: "/>
+
+                            <TextView
+                                android:id="@+id/androidversion2"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:textColor="@color/black"
+                                android:textSize="7sp"/>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
 
                 </LinearLayout>
 
