--- a/app/src/main/res/layout/pedido_activity.xml
+++ b/app/src/main/res/layout/pedido_activity.xml
@@ -49,7 +49,7 @@
                         android:id="@+id/toolbar_title"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="Soft"
+                        android:text="Soft Pedidos"
                         android:textSize="22sp"
                         android:layout_gravity="center_vertical"
                         android:fontFamily="@font/heebobold"
