popup ingreso clave y empresa

--- a/app/src/main/res/layout/custompopup.xml
+++ b/app/src/main/res/layout/custompopup.xml
@@ -12,9 +12,16 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+     <EditText
+        android:id="@+id/clave"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Clave"
+        android:textSize="22sp"/>
+
     <EditText
         android:id="@+id/empresa"
-        android:layout_width="300dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Empresa"
         android:textSize="22sp"/>
