--- a/app/src/main/res/layout/pedido_activity.xml
+++ b/app/src/main/res/layout/pedido_activity.xml
@@ -281,9 +281,19 @@
             android:id="@+id/codart"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+             android:layout_weight="1"
             android:textColor="@color/black"
             android:textSize="15sp"
             android:enabled="false"/>
+
+            <ImageButton
+                android:id="@+id/scan"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_gravity="center_horizontal|center_vertical"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:background="@drawable/ic_scanner" />
 
         </LinearLayout>
 
